Upgrade to java 17 and update the Column definition